# Nevil-picar-v2

./: .coverage  .gitignore  .roomodes  BUILD_STATUS.md  OLDstart.py  README.md  README_HARDWARE_BRIDGE.md  build_all_packages.sh  build_hardware_bridge.sh  demo_picar_logging.py  generate_test_coverage.py  nevil  nevil_direct.sh  nevil_installed.sh  nevil_ros2.sh  rebuild_nevil_interfaces_ai.sh  ros2_start.sh  run_hardware_test.sh  test_direct_hardware.py  test_force_success_logging.py  test_hardware_architecture.py  test_nevil_navigation_api.py  test_nevil_node_movement.py  test_picar_actions_real_movement.py  test_picar_hardware_logging.py  test_picar_success_logging.py  test_picarx_integration.py  test_real_hardware_logging.py  test_simple_picar_actions.py
src/nevil_bringup/: CMakeLists.txt  README.md  package.xml  setup.py
src/nevil_bringup/config/: default_config.yaml  development_config.yaml  minimal_config.yaml  physical_robot_config.yaml  simulation_config.yaml
src/nevil_bringup/launch/: common.launch.py  development.launch.py  full_system.launch.py  integration_test.launch.py  minimal_system.launch.py  physical_robot.launch.py  simulation.launch.py
src/nevil_bringup/nevil_bringup/: __init__.py  cli.py  nevil_cli.py  package_finder.py  system_monitor.py
src/nevil_bringup/resource/: nevil_bringup
src/nevil_bringup/scripts/: __init__.py  battery_monitor.py  hardware_init.py  nevil_cli.py  parameter_tuning_ui.py  system_monitor.py
src/nevil_bringup/test/: integration_test.py
src/nevil_core/: CMakeLists.txt  README.md  package.xml  setup.py
src/nevil_core/config/: hardware_config.yaml
src/nevil_core/launch/: nevil_core.launch.py  nevil_system.launch.py
src/nevil_core/nevil_core/: __init__.py  setup_tools.py  system_manager.py
src/nevil_core/src/: system_manager_node.cpp
src/nevil_interfaces/: CMakeLists.txt  README.md  package.xml.bak
src/nevil_interfaces/action/: NavigateToPoint.action  PerformBehavior.action
src/nevil_interfaces/msg/: BehaviorStatus.msg  SystemStatus.msg
src/nevil_interfaces/srv/: CheckObstacle.srv  HardwareCommand.srv
src/nevil_interfaces_ai/: CMakeLists.txt  README.md  README_Nevil_Audio_Interface.md  debug_message_reception.py  minimal_ai_test.py  package.xml  package.xml.bak  setup.py  test_integration.py  test_navigation_actions.py  test_openai_message_flow.py
src/nevil_interfaces_ai/action/: ProcessDialog.action
src/nevil_interfaces_ai/launch/: direct_speech_interface.launch.py  nevil_interfaces_ai.launch.py  nevil_interfaces_ai_with_simulation.launch.py  source_speech_interface.launch.py  speech_interface.launch.py  speech_interface_direct.launch.py
src/nevil_interfaces_ai/msg/: AICommand.msg  TextCommand.msg  TextResponse.msg  VoiceCommand.msg  VoiceResponse.msg
src/nevil_interfaces_ai/nevil_ai_pkg/: __init__.py  audio_hardware_interface.py  speech_recognition_node.py
src/nevil_interfaces_ai/nevil_interfaces_ai/: README_audio_hardware_interface.md  __init__.py  ai_interface_node.py  audio_hardware_interface.py  audio_hardware_interface_backup.py  audio_hardware_interface_fixed.py  debug_ai_interface.py  dialog_manager_node.py  integrated_ai_interface.py  simple_ai_interface.py  simple_message_test.py  speech_recognition_node.py  speech_synthesis_node.py  test_audio_hardware.py  test_env_loading.py  text_command_processor.py
src/nevil_interfaces_ai/scripts/: ai_interface_node.py  dialog_manager_node.py  speech_recognition_node.py  speech_synthesis_node.py  text_command_processor.py
src/nevil_interfaces_ai/srv/: QueryCapabilities.srv  TranslateCommand.srv
src/nevil_interfaces_ai_msgs/: CMakeLists.txt  package.xml
src/nevil_interfaces_ai_msgs/msg/: AIStatus.msg  Audio.msg  DialogState.msg  VoiceCommand.msg  VoiceResponse.msg
src/nevil_interfaces_ai_msgs/srv/: AIQuery.srv
src/nevil_navigation/: CMakeLists.txt  README.md  package.xml  package.xml.backup  package.xml.bak  setup.py
src/nevil_navigation/launch/: nevil_navigation.launch.py
src/nevil_navigation/nevil_navigation/: __init__.py  navigation_node.py  picar_actions.py  picarx.py
src/nevil_navigation/resource/: nevil_navigation
src/nevil_navigation/scripts/: README_navigation_monitor.md  navigation_monitor.py  navigation_node.py  start_monitor.sh  test_tf2_imports.py
src/nevil_navigation/src/: motion_control_node.cpp
src/nevil_perception/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.orig  README.md  package.xml  package.xml.bak  setup.py
src/nevil_perception/launch/: nevil_perception.launch.py  perception.launch.py
src/nevil_perception/nevil_perception/: __init__.py  camera_vision.py  obstacle_detection.py  perception_node.py
src/nevil_perception/scripts/: camera_vision.py  obstacle_detection.py
src/nevil_perception/src/: camera_vision_node.cpp  obstacle_detection_node.cpp
src/nevil_realtime/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.orig  README.md  package.xml  setup.py
src/nevil_realtime/config/: rt_config.yaml
src/nevil_realtime/docs/: hardware_architecture.md
src/nevil_realtime/launch/: nevil_realtime.launch.py
src/nevil_realtime/nevil_realtime/: README_hardware_interface.md  __init__.py  hardware_bridge_node.py  rt_config_manager.py  rt_hardware_interface.py  rt_motor_control_node.py  rt_sensor_node.py
src/nevil_realtime/scripts/: run_with_rt_priority.sh
src/nevil_realtime/src/: priority_inheritance_demo.cpp  rt_executor.cpp  rt_hardware_interface.cpp  rt_thread_utils.cpp
src/nevil_simulation/: CMakeLists.txt  README.md  package.xml.bak  setup.py
src/nevil_simulation/config/: simulation_config.yaml
src/nevil_simulation/environments/: empty.yaml  maze.yaml  obstacle_course.yaml
src/nevil_simulation/launch/: nevil_simulation.launch.py  nevil_system_with_simulation.launch.py
src/nevil_simulation/models/: README.md
src/nevil_simulation/nevil_simulation/: __init__.py  environment_generator.py  simulation_manager.py
src/nevil_simulation/scripts/: environment_generator.py  simulation_manager.py
src/nevil_testing/: CMakeLists.txt  CMakeLists.txt.bak  README.md  package.xml.bak  setup.py
(+182 files in other folders)
