<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nevil_bringup</name>
  <version>2.0.0</version>
  <description>
    Integration package for the Nevil-picar v2.0 project.
    Provides launch files and configuration for different system configurations.
  </description>
  <maintainer email="maintainer@example.com">Nevil Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nevil_core</depend>
  <depend>nevil_interfaces</depend>
  <depend>nevil_interfaces_ai</depend>
  <depend>nevil_navigation</depend>
  <depend>nevil_perception</depend>
  <depend>nevil_realtime</depend>
  <depend>nevil_simulation</depend>
  <depend>nevil_testing</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>